--- a/devops-quote-hub/Jenkinsfile
+++ b/devops-quote-hub/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
 
     stage('Build Docker Image') {
       steps {
-        dir('devops-quote-hub') {
+        dir('quote-app/devops-quote-hub') { // Path adjusted
           script {
             dockerImage = docker.build("${IMAGE_NAME}")
           }
